# axtc

./: Cargo.toml  LICENSE  Makefile.toml  README.md  axtc-restore.sh
.github/workflows/: build.yml  ci.yml  clippy.yml
src/: cli.rs  constants.rs  errors.rs  lib.rs  main.rs  template.rs  theme.rs  utils.rs
src/apply/: alacritty.rs  herbstluftwm.rs  mod.rs  picom.rs  polybar.rs
src/theme/: config.rs  mod.rs
src/utils/: constants.rs  mod.rs
templates/alacritty/: alacritty.toml.tera
templates/herbstluftwm/: autostart.tera
templates/picom/: picom.conf.tera
templates/polybar/: config.ini.tera  launch.py.tera
templates/polybar/scripts/: tags.py.tera
tests/: alacritty.rs  herbstluftwm.rs  picom.rs  polybar.rs
themes/: README.md  neon.toml  template.toml
