[package]
name = "arch-extendable-theme-changer"
version = "0.1.0"
edition = "2021"
authors = [ "Jacob Strader" ]
description = "Change color scheme of Arch Linux"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
