[package]
name = "axtc"
version = "0.1.0"
description = "Arch/X theme changer"
repository = "https://github.com/jtstrader/axtc"
license = "MIT"
edition = "2024"
publish = false                                  # For personal use only.

[lib]
name = "axtc_lib"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
dirs = "6.0.0"
