[package]
name = "axtc"
version = "0.1.0"
description = "Arch/X theme changer"
repository = "https://github.com/jtstrader/axtc"
license = "MIT"
edition = "2024"
publish = false                                  # For personal use only.

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
tera = "1"
toml = "0.8"
